# c11mux

./: .gitignore  .gitmodules  C11MUX_TODO.md  C11_TODO.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  PHILOSOPHY.md  Package.swift  README.ja.md  README.md  SECURITY.md  TODO.md  c11-Bridging-Header.h  c11.entitlements
.githooks/: pre-push
.github/: CODEOWNERS  dependabot.yml
.lattice/: config.json  context.md  ids.json
AppIcon.icon/: icon.json
CLI/: DoctorCommand.swift  HealthCommand.swift  c11.swift  cmux.swift
GhosttyTabs.xcodeproj/: project.pbxproj
Resources/: Info.plist  InfoPlist.xcstrings  Localizable.xcstrings  welcome.md
Sources/: AgentChip.swift  AgentChipBadge.swift  AgentDetector.swift  AgentRestartRegistry.swift  AgentSkillsView.swift  AppDelegate.swift  BrandColors.swift  BrowserSnapshotStore.swift  BrowserWindowPortal.swift  CLIAdvisoryConnectivity.swift  CLIResolutionSnapshot.swift  ContentView.swift  CreateWorkspaceSheet.swift  DefaultAgentConfig.swift  DefaultAgentResolver.swift  DefaultAgentSettingsView.swift  FlashAppearance.swift  FullDiskAccessProbe.swift  GhosttyConfig.swift  GhosttyTerminalView.swift  HealthCommandCore.swift  KeyboardShortcutSettings.swift  PaneMetadataStore.swift  PersistedMetadata.swift  PostHogAnalytics.swift  SentryHelper.swift  SessionPersistence.swift  (+35 more)
tools/computer-use/openai-runner/: README.md  pyproject.toml
tools/computer-use/openai-runner/openai_cua_runner/: __init__.py  __main__.py  adapter_client.py  artifacts.py  c11_oracle.py  responses_loop.py  safety.py  scenarios.py
(+1062 files in other folders)
