[project]
name = "openai-cua-runner"
version = "0.1.0"
description = "OpenAI Responses API computer-use runner for c11 tagged macOS builds"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.109.0",
]

[project.scripts]
openai-cua-runner = "openai_cua_runner.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openai_cua_runner"]
